pagina en construccion :)

--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
-<h1>¡Hola Mundo!</h1>
+<!doctype html>
+<html lang="es-ES">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width" />
+    <title>Ivan Gasent Zarza</title>
+  </head>
+  <body>
+    <img src="images/barreraConstruccion.gif" alt="[CUIDADO]/<" title="[CUIDADO]/<">
+    Esta página web está bajo construcción.¡CUIDADO!
+    <img src="images/construccion1.gif" alt="Personal presente en la obra: 1" title="Personal presente en la obra: 1">
+    <br>
+    <img src="images/underconstruct.gif" alt="---En construccion---" title="---En construccion---"/>
+  </body>
+</html>
