--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
     Esta página web está bajo construcción.¡CUIDADO!
     <img src="images/construccion1.gif" alt="Personal presente en la obra: 1" title="Personal presente en la obra: 1">
     <br>
-    <img src="images/underconstruct.gif" alt="---En construccion---" title="---En construccion---"/>
+    <img src="images/underconstruct.gif" alt="---EN CONSTRUCCION---" title="---EN CONSTRUCCION---"/>
   </body>
 </html>
